# ERP

place_orders/: auth.py  database.py  main.py  models.py  orders.py  products.py  pyproject.toml  schemas.py
place_orders/templates/: dashboard.html  index.html  login.html  orders.html  register.html
